--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starry Night Sky</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>XP Orbs</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Color switch button -->
+    <button id="colorSwitch">Switch Color</button>
     <script src="script.js"></script>
 </body>
 </html>
