--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Color switch button -->
+    <!-- Color switch and background switch buttons -->
     <button id="colorSwitch">Switch Color</button>
+    <button id="backgroundSwitch">Toggle Background</button>
     <script src="script.js"></script>
 </body>
 </html>
